force-app/main/default/objects/JourneyTask__c/JourneyTask__c.object-meta.xml
<CustomObject>
    <description>Add a Task related to the Journey Object.</description>
    <label>Journey Task</label>
    <nameField>
        <label>Journey Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>