force-app/main/default/objects/JourneyTask__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a Task has been Completed.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>