force-app/main/default/objects/JourneyTask__c/fields/CompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>CompletionStatus__c</fullName>
    <description>Indicates the status for each task.</description>
    <formula>IF( Completed__c , &quot;Complete&quot;, IF( Today() &gt; EstimatedCompletionDate__c , &quot;Overdue&quot;, &quot;In Progress&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status</label>
    <type>Text</type>
</CustomField>