force-app/main/default/objects/JourneyTask__c/fields/EstimatedCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletionDate__c</fullName>
    <description>Displays the Estimated Completion Date. It is being calculated as Relative Days to complete (unique to each task) added to the Journey&apos;s Onboarding Start Date.</description>
    <formula>Journey__r.OnboardingStartDate__c + RelativeDaystoComplete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>