force-app/main/default/objects/JourneyTask__c/fields/RelativeDaystoComplete__c.field-meta.xml
<CustomField>
    <fullName>RelativeDaystoComplete__c</fullName>
    <description>Indicates the period in which the Task needs to be completed.</description>
    <label>Relative Days to Complete</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>