force-app/main/default/objects/JourneyTask__c/fields/TaskRequirements__c.field-meta.xml
<CustomField>
    <fullName>TaskRequirements__c</fullName>
    <description>Display the Completion Requirements for each Task. Steps to be completed.</description>
    <label>Task Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>