force-app/main/default/objects/JourneyTask__c/validationRules/Days_to_Complete_Handle_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Days_to_Complete_Handle_Values</fullName>
    <active>true</active>
    <description>Days To Complete field should be display only positive values.</description>
    <errorConditionFormula>RelativeDaystoComplete__c &lt;=0</errorConditionFormula>
    <errorMessage>Relative Days to Complete should be a positive value and larger than 1.</errorMessage>
</ValidationRule>